# todoapp-django-sample

./: .env.sample  Dockerfile  Dockerfile.dev  README.md  docker-compose.prd.yaml  docker-compose.yaml  pyproject.toml
config/: drf.py  middleware.py  urls.py
config/settings/: base.py  production.py
main/: admin.py  env.py  urls.py
main/management/commands/: make_debug_user.py
main/migrations/: 0001_initial.py  0002_auto_20210715_0356.py  0002_auto_20210715_1551.py  0002_auto_20210924_1242.py  0003_auto_20210718_2154.py  0003_auto_20210930_0141.py  0004_auto_20210718_2203.py  0004_auto_20220221_2316.py  0005_auto_20220814_1617.py  0005_schedule.py  0006_auto_20220825_2206.py  0007_alter_repeat_type.py
main/models/: __init__.py  project.py  schedule.py  tag.py  task.py  user.py
main/serializers/: __init__.py  project.py  schedule.py  task.py  user.py
main/utils/: __init__.py
main/utils/djangoutils/: serializer.py
main/utils/googleutils/: translate.py
main/views/api/: __init__.py  auth.py  project.py  register.py  schedule.py  tag.py  task.py  user.py
shells/: setup_production_server.sh
